--- a/index.html
+++ b/index.html
@@ -7,35 +7,63 @@
     <!-- displays site properly based on user's device -->
 
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.ico">
-
+    <link rel="stylesheet" href="styles.css">
     <title>Huddle landing page with single introductory section</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
 
   <body>
-
-    Build The Community Your Fans Will Love
-
-    Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-    Create connections with your users as you engage in genuine discussion.
-
-    Register
-
+    <header>
+      <div class="page-logo">
+        <img class="img-logo" src="./images/logo.svg" alt="Huddle logo">
+      </div>
+    </header>
+    <main id="hero-section">
+      <div class="hero_img">
+        <img src="./images/illustration-mockups.svg" alt="" width="">
+      </div>
+      <div class="hero_text">
+        <h2>Build The Community Your Fans Will Love</h2>
+        <p>
+          Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+          Create connections with your users as you engage in genuine discussion.
+        </p>
+        <a class="btn" href="#">Register</a>
+      </div>
+    </main>
+    <section class="b-section">
+      <div class="empty"></div>
+      <div class="social_icon_box">
+        <a href="">
+          <svg class="feather feather-twitter" enable-background="new 0 0 56.693 56.693" height="24px" id="Layer_1"
+            version="1.1" viewBox="0 0 56.693 56.693" width="24px" xml:space="preserve"
+            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <path
+              d="M40.43,21.739h-7.645v-5.014c0-1.883,1.248-2.322,2.127-2.322c0.877,0,5.395,0,5.395,0V6.125l-7.43-0.029  c-8.248,0-10.125,6.174-10.125,10.125v5.518h-4.77v8.53h4.77c0,10.947,0,24.137,0,24.137h10.033c0,0,0-13.32,0-24.137h6.77  L40.43,21.739z" />
+          </svg>
+        </a>
+        <a href="">
+          <svg class="feather feather-facebook" enable-background="new 0 0 56.693 56.693" height="24px" id="Layer_1"
+            version="1.1" viewBox="0 0 56.693 56.693" width="24px" xml:space="preserve"
+            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <path
+              d="M52.837,15.065c-1.811,0.805-3.76,1.348-5.805,1.591c2.088-1.25,3.689-3.23,4.444-5.592c-1.953,1.159-4.115,2-6.418,2.454  c-1.843-1.964-4.47-3.192-7.377-3.192c-5.581,0-10.106,4.525-10.106,10.107c0,0.791,0.089,1.562,0.262,2.303  c-8.4-0.422-15.848-4.445-20.833-10.56c-0.87,1.492-1.368,3.228-1.368,5.082c0,3.506,1.784,6.6,4.496,8.412  c-1.656-0.053-3.215-0.508-4.578-1.265c-0.001,0.042-0.001,0.085-0.001,0.128c0,4.896,3.484,8.98,8.108,9.91  c-0.848,0.23-1.741,0.354-2.663,0.354c-0.652,0-1.285-0.063-1.902-0.182c1.287,4.015,5.019,6.938,9.441,7.019  c-3.459,2.711-7.816,4.327-12.552,4.327c-0.815,0-1.62-0.048-2.411-0.142c4.474,2.869,9.786,4.541,15.493,4.541  c18.591,0,28.756-15.4,28.756-28.756c0-0.438-0.009-0.875-0.028-1.309C49.769,18.873,51.483,17.092,52.837,15.065z" />
+          </svg>
+        </a>
+        <a href="">
+          <svg class="feather feather-instagram" fill="none" height="24" stroke="currentcolor" stroke-linecap="round"
+            stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+            <rect height="20" rx="5" ry="5" width="20" x="2" y="2" />
+            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
+            <line x1="17.5" x2="17.51" y1="6.5" y2="6.5" />
+          </svg>
+        </a>
+      </div>
+    </section>
     <footer>
       <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="https://github.com/adebisiabdussamad">Adebisi Abdussamad</a>.
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor.</a>
+        Coded by <a href="https://github.com/adebisiabdussamad">Adebisi Abdussamad.</a>
       </p>
     </footer>
   </body>
