--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
           Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
           Create connections with your users as you engage in genuine discussion.
         </p>
-        <a class="btn" href="#">Register</a>
+        <div class="btn-cont">
+          <a class="btn" href="#">Register</a>
+        </div>
       </div>
     </main>
     <section class="b-section">
