added alt attribute

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main id="hero-section">
       <div class="hero_img">
-        <img src="./images/illustration-mockups.svg" alt="" width="">
+        <img src="./images/illustration-mockups.svg" alt="an illustration" width="">
       </div>
       <div class="hero_text">
         <h2>Build The Community Your Fans Will Love</h2>
